create a user and associate the role of employee to it in addition to the restaurant id